--- a/templates/main_menu.html
+++ b/templates/main_menu.html
@@ -172,6 +172,7 @@
             justify-content: space-between;
             align-items: center;
             color: white;
+            box-sizing: border-box;
         }
 
         @keyframes fadeIn {
